03 Dec 2010 Build logo in console initialization only if it hasn't already
            been built via HERCLOGO configuration statement - Kevin Leonard
01 Dec 2010 cvslvlck renamed to bldlvlck and corrections made for Apple/Darwin
            - Enrico Sorichetti by Fish (README.CVS also renamed to README.SVN)
01 Dec 2010 Allow //./Tape0 or \\.\Tape0 for Windows device filename - Fish
21 Nov 2010 Corrected DIAGNOSE X'000' to report timezone differential - Harold Grovesteen
28 Oct 2010 MAINSIZE and XPNDSIZE UNLOCKED and LOCKED options - Mark L. Gaubatz
            LOCKED option indicates memory is to be locked into storage while
            UNLOCKED indicates memory is not locked into storage. The default is
            UNLOCKED.

            Note: Hercules preserves the last locking state of MAINSIZE and
            XPNDSIZE. Consequently, once storage is locked, any change to a
            storage size will honor the existing lock state of memory unless
            the lock state (UNLOCKED or LOCKED) is specified on the new MAINSIZE
            or XPNDSIZE command.

            CAUTION: Do not lock main storage or expanded storage unless
            sufficient real memory is available to back the request. Failure to
            do so may require host system reboot to recover.

21 Oct 2010 Split CPU and DEBUG functions from hsccmd.c to hscpufun.c and hscemode.c - Paul Gorlinsky
03 Oct 2010 Split loadtext_cmd() and loadcore_cmd() from hsccmd.c to loadmem.c - Paul Gorlinsky
02 Oct 2010 Change MAX_CPU_ENGINES to MAX_CPU in several places. Wrong use of
            MAX_CPU_ENGINES. MAX_CPU_ENGINES is a build time option. Paul Gorlinsky
29 Sep 2010 CKD non-lfs and non-compressed disk, maximum 35 chunks 1-9,A-Z Paul Gorlinsky
29 Sep 2010 MODEL, PLANT, MANUFACTURER changed to PANEL+CONFIG, enhanced support - Paul Gorlinsky
27 Sep 2010 Code page user table support - Paul Gorlinsky
27 Sep 2010 IPTE Range Facility - Jan Jaeger