@@ -38,8 +38,7 @@ MAX_CPU_ENGINES = 8
 !ENDIF
 
 rcflags = $(rcflags) -D _MSVC_ -D VERSION=$(VERSION) -D V1=$(V1) -D V2=$(V2) -D V3=$(V3) -D V4=$(V4)
-
-cflags  = $(cflags)  /D _MSVC_ /D VERSION=$(VERSION) /D MAX_CPU_ENGINES=$(MAX_CPU_ENGINES)
+cflags  = $(cflags)  /D _MSVC_ /D VERSION=$(VERSION) -D V1=$(V1) -D V2=$(V2) -D V3=$(V3) -D V4=$(V4) /D MAX_CPU_ENGINES=$(MAX_CPU_ENGINES)
 
 !IF DEFINED(CUSTOM_BUILD_STRING)
 cflags  = $(cflags)  /D CUSTOM_BUILD_STRING=\"$(CUSTOM_BUILD_STRING)\"
