@@ -38,6 +38,17 @@
 #endif
 #endif
 
+/*
+  Some modules, such as dyngui, might need these values,
+  since they are ALWAYS numeric whereas VERSION is not.
+*/
+#if !defined(V1) || !defined(V2) || !defined(V3) || !defined(V4)
+  #error VERSION not defined properly
+#endif
+
+/*
+  The 'VERSION' string can be any value the user wants.
+*/
 #if !defined(VERSION)
   #ifndef _MSVC_
     #warning No version specified
